# ag-iot-device-demo-esp32

./: CMakeLists.txt  README.en.md  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/agora_iot_sdk/: CMakeLists.txt
components/agora_iot_sdk/include/: agora_iot_api.h  agora_iot_base.h  agora_iot_call.h  agora_iot_device_manager.h  agora_iot_dp.h  agora_iot_file_player.h
components/agora_iot_sdk/lib/: LICENSE.txt
components/blufi/: CMakeLists.txt  blufi_impl.c  blufi_info.h  blufi_init.c
components/camera/: CMakeLists.txt  cam_hal.c
components/camera/driver/: esp_camera.c
components/camera/driver/include/: sensor.h
components/camera/include/: esp_camera.h
components/quirc/: CMakeLists.txt  Kconfig
components/uvc_stream/: uvc_stream.c
components/uvc_stream/include/: uvc_stream.h
include/: agora_iot_api.h  pacer.h
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  blufi_impl.c  blufi_security.c  device_state.c  device_state.h  doorbell_dp_common.c  doorbell_dp_common.h  video_doorbell.c
